# GPU-Kalari

./: .gitignore  CMakeLists.txt  README  buildProject.sh
CUDA/BVH/: CMakeLists.txt  Todo.txt  buildProject.sh
CUDA/BVH/include/: AABB.h  bvh.cuh  bvh.h  mycudaUtilities.cuh  smartBuffer.cuh
CUDA/BVH/src/: AABB.cpp  CMakeLists.txt  bvh.cu  main.cpp  main.cu
CUDA/MatrixMultiply/: CMakeLists.txt  buildProject.sh
CUDA/MatrixMultiply/include/: MatMultOnGPUUsingCUDA.cuh  MatrixBase.hpp  gpuTimer.hpp  hostTimer.hpp
CUDA/MatrixMultiply/src/: MatMultOnGPUUsingCUDA.cu  gpuTimer.cpp
OpenACC/testFactoryDesignPattern/: CMakeLists.txt
OpenACC/testFactoryDesignPattern/include/: boundaryConditionTypeInterface.hpp  boundaryCreatorInterface.hpp  dirichletBoundaryCreator.hpp  dirichletBoundaryTypeImpl.hpp
OpenACC/testFactoryDesignPattern/insights/: instantiationorderWITHfunctioncall  instantiationorderWOfunctioncall
OpenACC/testFactoryDesignPattern/src/: main.cpp
OpenACC/testSTLContainer/: CMakeLists.txt
OpenACC/testSTLContainer/src/: main.cpp
OpenACC/testStorageClass/: CMakeLists.txt
OpenACC/testStorageClass/include/: state.hpp
OpenACC/testStorageClass/src/: main.cpp
OpenACC/testStrategyDesignPatternSimple/: CMakeLists.txt
OpenACC/testStrategyDesignPatternSimple/include/: kernel.hpp  strategyA.hpp  strategyB.hpp
OpenACC/testStrategyDesignPatternSimple/src/: main.cpp
OpenACC/testUniquePtr/: CMakeLists.txt
OpenACC/testUniquePtr/src/: main.cpp
app/: CMakeLists.txt  matmult.cpp
include/: MatMultOnGPUUsingCUDA.cuh  gpuTimer.hpp
src/: CMakeLists.txt  MatMultOnGPUUsingCUDA.cu  MatrixBase.cpp  hostTimer.cpp
